test/spec/address.txt
;;; EXE: test/run-d8.py
;;; FLAGS: --spec
;;; STDIN_FILE: third_party/testsuite/address.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/address.wast:33:66: offset must be less than or equal to 0xffffffff
...ory 1024) (func $bad1 (param $i i32) (i32.load offset=4294967296 (get_loca...
                                        ^
97
98
99
122
25185
25442
25699
122
1684234849
1701077858
1717920867
122
$invoke_0 = undefined
0
0
0
0
0
0
0
0
0
0
0
0
$invoke_1 = undefined
0
0
0
0
0
0
0
0
0
0
0
3/3 tests passed.
;;; STDOUT ;;)
